--- a/css/styles.css
+++ b/css/styles.css
@@ -229,8 +229,8 @@ header {
 .description img, .includes img {
     flex: 1;
     width: 100%;
-    height: auto;
     max-width: 500px;
+    height: auto;
     object-fit: cover;
 }
 
@@ -336,8 +336,8 @@ h2.no-underline {
     }
 
     .description img, .includes img {
-        max-width: 100%;
-        width: auto;
+        width: 100%;
+        height: auto;
     }
 
     .news-item {
